--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <div class="top-buttons">
     <button onclick="showImage(0)">P1</button>
     <button onclick="showImage(1)">P2</button>
-    <button onclick="showImage(2)">P3</button>
   </div>
 
   <div class="image-container">
-    <img id="mainImage" src="images/img1.jpg" alt="Imagen principal"/>
+    <img id="mainImage" src="Home.png" alt="Pagina principal"/>
   </div>
 
   <script src="script.js"></script>
