--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="top-buttons">
-    <button onclick="showImage(0)">P1</button>
-    <button onclick="showImage(1)">P2</button>
+    <button onclick="showImage(0)">Home</button>
+    <button onclick="showImage(1)">Us</button>
   </div>
 
   <div class="image-container">
-    <img id="mainImage" src="Home.png" alt="Pagina principal"/>
+    <img id="mainImage" src="images/Home.png" alt="Imagen principal"/>
   </div>
 
   <script src="script.js"></script>
