--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="image-container">
-    <img id="mainImage" src="Home.png" alt="Imagen principal"/>
+   <img src="./Home.png" alt="Imagen principal" />
   </div>
 
   <script src="script.js"></script>
