--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <div class="image-container">
    <img src="Home.png" alt="Imagen principal" />
+    <img src="Us.png" alt="Imagen Segundaria" />
   </div>
 
   <script src="script.js"></script>
